--- a/ejercicios html-css medio M2/class-timetable.html
+++ b/ejercicios html-css medio M2/class-timetable.html
@@ -8,74 +8,71 @@
         <link rel="stylesheet" href="css/style-class-timetable.css">
     </head>
     <body>
+        <div class="box1">
+        <h1>Timetable 2022/2023</h1>
         <table>
+            <div class="box2">
             <thead>
                 <tr>
                     <th>H/D</th>
-                    <th>Monday</th>
-                    <th>Tuesday</th>
-                    <th>Wednesday</th>
-                    <th>Thursday</th>
-                    <th>Friday</th>
+                    <th>Mo</th>
+                    <th>Tu</th>
+                    <th>We</th>
+                    <th>Th</th>
+                    <th>Fr</th>
+                    <th>Sa</th>
                 </tr>
+            </thead>
+            <tbody>
                 <tr>
-                    <td>9:00-10:00</td>
-                    <td rowspan="5">Assembly</td> </td>
+                    <td class="Hour">9:00-10:00</td>
+                    <td class="Assembly" colspan="6">Assembly</td> </td>
                     
                 </tr>
                 <tr>
-                    <td>10:00-11:00</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="Hour">10:00-11:00</td>
+                    <td class="SST">SST</td>
+                    <td class="Mar">Mar</td>
+                    <td class="Hin">Hin</td>
+                    <td class="Sci">Sci</td>
+                    <td class="SST" rowspan="3">SST</td>
+                    <td class="SST">SST</td>
                 </tr>
                 <tr>
-                    <td>11:00-12:00</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="Hour">11:00-12:00</td>
+                    <td class="Sci">Sci</td>
+                    <td class="Math">Math</td>
+                    <td class="SST">SST</td>
+                    <td class="Mar">Mar</td>
+                    <td class="Mus">Mus</td>
                 </tr>
                 <tr>
-                    <td>12:30-13:30</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="Hour">12:30-13:30</td>
+                    <td class="Math" rowspan="2">Math</td>
+                    <td class="Hin" rowspan="2">Hin</td>
+                    <td class="Eng">Eng</td>
+                    <td class="Hin">Hin</td>
+                    <td class="Sci">Sci</td>
                 </tr>
                 <tr>
-                    <td>13:30-14:30</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="Hour">13:30-14:30</td>
+                    <td class="Comp">Comp</td>
+                    <td class="Eng" rowspan="2">Eng</td>
+                    <td class="Sci">Sci</td>
+                    <td class="Eng">Eng</td>
                 </tr>
                 <tr>
-                    <td>14:30-15:30</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="Hour">14:30-15:30</td>
+                    <td class="Mar">Mar</td>
+                    <td class="SST">SST</td>
+                    <td class="Sci">Sci</td>
+                    <td class="Eng">Eng</td>
+                    <td class="Mar">Mar</td>
                 </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr></tr>
-            </thead>
+            </tbody>
+            </div>
+        </table>
+        </div>
+    </body>
+</html>
+            
