--- a/ejercicios html-css medio M2/Code.html
+++ b/ejercicios html-css medio M2/Code.html
@@ -16,14 +16,17 @@
             <code>
                 <button>Presióname</button>
             </code>
-            <p>en <span class="Abrev"><abbr title="JavaScript">js</abbr></span>quedaría así</p>
+            <p>en
+                <span class="Abrev">
+                    <abbr title="JavaScript">js</abbr>
+                </span>quedaría así</p>
             <div class="code">
                 <code>const button = document.querySelector("button");
-
-button.onclick = function () {
-  let name = prompt("¿Cuál es tu nombre?");
-  alert("¡Hola " + name + ", encantado de verte!");
-};</code>
+                    
+                    button.onclick = function () {
+                      let name = prompt("¿Cuál es tu nombre?");
+                      alert("¡Hola " + name + ", encantado de verte!");
+                    };</code>
             </div>
             <h3>también podemos ver el siguiente ejemplo</h3>
             <p>para determinar la distribución de una página web:</p>
@@ -50,17 +53,19 @@ button.onclick = function () {
                         también recomendable
                         <cite>internet para muy muy dummies</cite>
                         y para casos muy extremos
-                        <cite>esto no es lo suyo, alternativas enriquecedoras para una vida productiva <span>volúmenes 1 al 27</span></cite>
+                        <cite>esto no es lo suyo, alternativas enriquecedoras para una vida productiva
+                            <span>volúmenes 1 al 27</span>
+                        </cite>
                     </p>
                 </h4>
             </div>
             <form>
-              <a href="#top">
-                  <input type="button" value="Ir arriba">
-              </a>
-          </form>
+                <a href="#top">
+                    <input type="button" value="Ir arriba">
+                </a>
+            </form>
         </div>
-       
+
 
     </body>
 </html>
