--- a/ejercicios html-css medio M2/flex-box2.html
+++ b/ejercicios html-css medio M2/flex-box2.html
@@ -21,13 +21,11 @@
             <footer>
                 <div class="">
                 <h4>$999</h4>
-                <a href="">Free Shipping</a>
-                </div>  
-                <button>Buy now</button>
+                <a href="">Free Shipping</a> 
+                <button class="hvr-bounce-in">Buy now</button>
+                </div>
             </footer>
         </div>
-    </section>
-    <section>
         <div class="box1">
             <div class="img">
                 <img src="img/laptop.jpg" alt="">
@@ -38,13 +36,11 @@
             <footer>
                 <div class="">
                 <h4>$999</h4>
-                <a href="">Free Shipping</a>
-                </div>  
-                <button>Buy now</button>
+                <a href="">Free Shipping</a> 
+                <button class="hvr-bounce-in">Buy now</button>
+                </div>
             </footer>
         </div>
-    </section>
-    <section>
         <div class="box1">
             <div class="img">
                 <img src="img/laptop.jpg" alt="">
@@ -55,13 +51,11 @@
             <footer>
                 <div class="">
                 <h4>$999</h4>
-                <a href="">Free Shipping</a>
-                </div>  
-                <button>Buy now</button>
+                <a href="">Free Shipping</a> 
+                <button class="hvr-bounce-in">Buy now</button>
+                </div>
             </footer>
         </div>
-    </section>
-    <section>
         <div class="box1">
             <div class="img">
                 <img src="img/laptop.jpg" alt="">
@@ -72,13 +66,11 @@
             <footer>
                 <div class="">
                 <h4>$999</h4>
-                <a href="">Free Shipping</a>
-                </div>  
-                <button>Buy now</button>
+                <a href="">Free Shipping</a> 
+                <button class="hvr-bounce-in">Buy now</button>
+                </div>
             </footer>
         </div>
-    </section>
-    <section>
         <div class="box1">
             <div class="img">
                 <img src="img/laptop.jpg" alt="">
@@ -89,13 +81,11 @@
             <footer>
                 <div class="">
                 <h4>$999</h4>
-                <a href="">Free Shipping</a>
-                </div>  
-                <button>Buy now</button>
+                <a href="">Free Shipping</a> 
+                <button class="hvr-bounce-in">Buy now</button>
+                </div>
             </footer>
         </div>
-    </section>
-    <section>
         <div class="box1">
             <div class="img">
                 <img src="img/laptop.jpg" alt="">
@@ -106,13 +96,11 @@
             <footer>
                 <div class="">
                 <h4>$999</h4>
-                <a href="">Free Shipping</a>
-                </div>  
-                <button>Buy now</button>
+                <a href="">Free Shipping</a> 
+                <button class="hvr-bounce-in">Buy now</button>
+                </div>
             </footer>
         </div>
-    </section>
-    <section>
         <div class="box1">
             <div class="img">
                 <img src="img/laptop.jpg" alt="">
@@ -123,13 +111,11 @@
             <footer>
                 <div class="">
                 <h4>$999</h4>
-                <a href="">Free Shipping</a>
-                </div>  
-                <button>Buy now</button>
+                <a href="">Free Shipping</a> 
+                <button class="hvr-bounce-in">Buy now</button>
+                </div>
             </footer>
         </div>
-    </section>
-    <section>
         <div class="box1">
             <div class="img">
                 <img src="img/laptop.jpg" alt="">
@@ -140,9 +126,24 @@
             <footer>
                 <div class="">
                 <h4>$999</h4>
-                <a href="">Free Shipping</a>
-                </div>  
-                <button>Buy now</button>
+                <a href="">Free Shipping</a> 
+                <button class="hvr-bounce-in">Buy now</button>
+                </div>
+            </footer>
+        </div>
+        <div class="box1">
+            <div class="img">
+                <img src="img/laptop.jpg" alt="">
+            </div>
+            <div class="text">
+            <div class="name">Toshiba Laptop with 500GB HDD</div><div class="stars"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
+            </div>
+            <footer>
+                <div class="">
+                <h4>$999</h4>
+                <a href="">Free Shipping</a> 
+                <button class="hvr-bounce-in">Buy now</button>
+                </div>
             </footer>
         </div>
     </section>
