--- a/ejercicios html-css medio M2/flex-box4.html
+++ b/ejercicios html-css medio M2/flex-box4.html
@@ -20,7 +20,7 @@
                         </div>
                         <div class="c2">
                             <i class="fa-solid fa-cart-plus"></i>
-                            <p class="p1">486</p>
+                            <p class="p1 hvr-icon-buzz-out">486</p>
                         </div>
                         <div class="c3">
                             <h4>
@@ -39,7 +39,7 @@
                         </div>
                         <div class="c2">
                             <i class="fa-solid fa-rocket"></i>
-                            <p class="p1">486</p>
+                            <p class="p1 hvr-icon-buzz-out">486</p>
                         </div>
                         <div class="c3">
                             <h4>
@@ -58,7 +58,7 @@
                         </div>
                         <div class="c2">
                             <i class="fa-solid fa-arrows-rotate"></i>
-                            <p class="p1">486</p>
+                            <p class="p1 hvr-icon-buzz-out">486</p>
                         </div>
                         <div class="c3">
                             <h4>
@@ -77,7 +77,7 @@
                         </div>
                         <div class="c2">
                             <i class="fa-solid fa-credit-card"></i>
-                            <p class="p1">486</p>
+                            <p class="p1 hvr-icon-buzz-out">486</p>
                         </div>
                         <div class="c3">
                             <h4>
