--- a/ejercicios html-css medio M2/flex-box3.html
+++ b/ejercicios html-css medio M2/flex-box3.html
@@ -20,7 +20,7 @@
                         <img src="img/zapato1.png" alt="">
                         <h3>Awesome product</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        <div class="stars">
+                        <div class="stars hvr-float-shadow">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
@@ -32,7 +32,7 @@
                         <img src="img/zapato2.png" alt="">
                         <h3>Awesome product</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        <div class="stars">
+                        <div class="stars hvr-float-shadow">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
@@ -44,7 +44,7 @@
                         <img src="img/zapato3.png" alt="">
                         <h3>Awesome product</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        <div class="stars">
+                        <div class="stars hvr-float-shadow">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
@@ -56,7 +56,7 @@
                         <img src="img/zapato4.png" alt="">
                         <h3>Awesome product</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        <div class="stars">
+                        <div class="stars hvr-float-shadow">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
