some practice using code js for moving through the text

--- a/ejercicios html-css fácil M2/proyecto login-reg/login.html
+++ b/ejercicios html-css fácil M2/proyecto login-reg/login.html
@@ -27,5 +27,6 @@
                 <a href="http://example.com" style="color:black">Create an account</a>
             </p>
         </div>
+        <script src="login.js"></script>
     </body>
 </html>
